--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -1,6 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100..900&display=swap");
+
 html,
 body {
-  height: 100%;
+  font-family: "Noto Sans TC", serif;
   text-align: center;
 }
 
